reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__projections.rs_line_678_col_5.log

*** crates/tracewake-core/src/projections.rs:678:5: replace build_notebook_view -> NotebookView with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/projections.rs
+++ replace build_notebook_view -> NotebookView with Default::default()
@@ -670,76 +670,17 @@
         debug_available: false,
     })
 }
 
 pub fn build_notebook_view(
     projection: &EpistemicProjection,
     context: &KnowledgeContext,
 ) -> NotebookView {
-    let mut beliefs = projection
-        .beliefs_for_context(context)
-        .into_iter()
-        .map(|belief| NotebookBeliefEntry {
-            belief_id: belief.belief_id().as_str().to_string(),
-            summary: belief.proposition().render(),
-            source_summary: source_summary(belief.source()),
-            confidence_label: belief.confidence().serialize_canonical(),
-            acquired_tick: belief.acquired_tick().value(),
-            contradiction_ids: belief
-                .contradiction_ids()
-                .iter()
-                .map(|id| id.as_str().to_string())
-                .collect(),
-        })
-        .collect::<Vec<_>>();
-    beliefs.sort();
-
-    let mut observations = projection
-        .observations_for_context(context)
-        .into_iter()
-        .map(|observation| NotebookObservationEntry {
-            observation_id: observation.observation_id().as_str().to_string(),
-            channel: observation.channel().stable_id().to_string(),
-            summary: format!("{} observation", observation.channel().stable_id()),
-            confidence_label: observation.confidence().serialize_canonical(),
-            observed_tick: observation.observed_tick().value(),
-        })
-        .collect::<Vec<_>>();
-    observations.sort();
-
-    let mut contradictions = projection
-        .contradictions_for_context(context)
-        .into_iter()
-        .map(|contradiction| NotebookContradictionEntry {
-            contradiction_id: contradiction.contradiction_id().as_str().to_string(),
-            summary: "Contradicts your earlier expectation.".to_string(),
-        })
-        .collect::<Vec<_>>();
-    contradictions.sort();
-
-    let mut typed_leads = projection
-        .contradictions_for_context(context)
-        .into_iter()
-        .filter_map(|contradiction| typed_notebook_lead(projection, context, contradiction))
-        .collect::<Vec<_>>();
-    typed_leads.sort();
-    let possible_leads = typed_leads
-        .iter()
-        .map(|lead| lead.summary.clone())
-        .collect();
-
-    NotebookView {
-        viewer_actor_id: context.viewer_actor_id().clone(),
-        source_bound_beliefs: beliefs,
-        recent_observations: observations,
-        known_contradictions: contradictions,
-        typed_leads,
-        possible_leads,
-    }
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 fn typed_notebook_lead(
     projection: &EpistemicProjection,
     context: &KnowledgeContext,
     contradiction: &Contradiction,
 ) -> Option<NotebookLeadEntry> {
     if contradiction.kind() != ContradictionKind::ExpectedItemAbsentFromContainer {


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/projections.rs` has changed (1781904690.003923900s, 5s after last build at 1781904685.887923900s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused imports: `NotebookBeliefEntry`, `NotebookContradictionEntry`, and `NotebookObservationEntry`
  --> crates/tracewake-core/src/projections.rs:27:79
   |
27 |     DebugEventLogView, DebugEventSummary, EmbodiedViewModel, NeedStatusEntry, NotebookBeliefEntry,
   |                                                                               ^^^^^^^^^^^^^^^^^^^
28 |     NotebookContradictionEntry, NotebookLeadEntry, NotebookObservationEntry, NotebookView,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^                     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `NotebookView: Default` is not satisfied
   --> crates/tracewake-core/src/projections.rs:678:5
    |
678 |     Default::default() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `NotebookView`
   --> crates/tracewake-core/src/view_models.rs:110:1
    |
110 | pub struct NotebookView {
    | ^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 1 warning
error: could not compile `tracewake-core` (lib) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `view_models::NotebookView: Default` is not satisfied
   --> crates/tracewake-core/src/projections.rs:678:5
    |
678 |     Default::default() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `view_models::NotebookView`
   --> crates/tracewake-core/src/view_models.rs:110:1
    |
110 | pub struct NotebookView {
    | ^^^^^^^^^^^^^^^^^^^^^^^

warning: `tracewake-core` (lib test) generated 1 warning (1 duplicate)
error: could not compile `tracewake-core` (lib test) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
